fix: create update employee work in stores feat: add role filter, product apis